logs/Slang/generated/hdlconv/hdlconvertor_p328.sv.log
name: hdlconvertor_p328
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p328.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p328.sv:5:8: error: identifier 'addr_width' used before its declaration
input [addr_width - 1:0] address;
       ^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p328.sv:4:12: note: declared here
localparam addr_width = clogb2(ram_depth);
           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p328.sv:7:8: error: identifier 'data_width' used before its declaration
inout [data_width - 1:0] data;
       ^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p328.sv:2:11: note: declared here
parameter data_width = 8;
          ^
